--- a/Sign-in/pom.xml
+++ b/Sign-in/pom.xml
@@ -52,13 +52,18 @@
             <version>1.2.18</version>
         </dependency>
 
-        <!-- 驱动类-->
+<!--         驱动类-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.40</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
